A handful of additional expressions and some refactoring